Modified to: - comments are processed by [marked](https://github.com/chjj/marked) github flavored markdown - code is highlighted by [highlight.js](https://github.com/isagalaev/highlight.js) javascript   syntax highlighter - default style is changed to look more like [lit](https://github.com/apres/lit.js) - table of contents includes all the files with all the titles from project - `{ { TOC } }` tag to insert auto generated table of contents in your markdown - `[Any Title]` syntax for auto linking to any title in the project (for now citare does   not resolve duplicate titles so link will point to the first found duplicate title)

--- a/lib/styles/default/docPage.jade
+++ b/lib/styles/default/docPage.jade
@@ -4,11 +4,11 @@ html(lang="en")
     title= targetPath
   meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
   meta(name="viewport", content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0")
-  meta(name="groc-relative-root", content=relativeRoot)
-  meta(name="groc-document-path", content=targetPath)
-  meta(name="groc-project-path", content=projectPath)
+  meta(name="citare-relative-root", content=relativeRoot)
+  meta(name="citare-document-path", content=targetPath)
+  meta(name="citare-project-path", content=projectPath)
   - if (project.githubURL)
-    meta(name="groc-github-url", content=project.githubURL)
+    meta(name="citare-github-url", content=project.githubURL)
   link(rel="stylesheet", type="text/css", media="all", href=relativeRoot + "assets/style.css")
   script(type="text/javascript", src=relativeRoot + "assets/behavior.js")
 
@@ -21,11 +21,26 @@ html(lang="en")
         .file-path= projectPath
     #document
       - for (var i in segments)
-        .segment
-          - if (segments[i].markdownedComments != '')
-            .comments
-              .wrapper!= segments[i].markdownedComments
+        - if (missingDoc || segments[i].markdownedComments != '')
+          .segment
+            - if (segments[i].markdownedComments != '')
+              - if (commentsOnly)
+                .comments.commentsonly
+                  .wrapper!= segments[i].markdownedComments
+              - else
+                .comments
+                  .wrapper!= segments[i].markdownedComments
+            - else
+              .comments
+                .wrapper!= "<p>... is missing some documentation.</p>"
 
-          - if (segments[i].highlightedCode != '')
-            .code
-              .wrapper!= segments[i].highlightedCode
+            - if (segments[i].highlightedCode != '')
+              .code
+                .wrapper!= segments[i].highlightedCode
+
+        - else
+          .segment.nocomment
+            .comments
+            - if (segments[i].highlightedCode != '')
+              .code
+                .wrapper!= segments[i].highlightedCode
