- Callout style fix

--- a/lib/styles/callout/style.styl
+++ b/lib/styles/callout/style.styl
@@ -440,7 +440,7 @@ em, i
       display inline-block
       margin-right 1em
 
-  .nocomment
+  &.nocomment
     &:after
       content ""
       text-shadow 0
