- fixed github button (broken during style changes) - few changes in multi-line comments handling - marked options changed (HTML allowed)

--- a/lib/styles/callout/style.styl
+++ b/lib/styles/callout/style.styl
@@ -164,7 +164,7 @@ nav
         transition opacity 200ms
         filter unquote("progid:DXImageTransform.Microsoft.Alpha(Opacity=50)")
         opacity 0.5
-        background url("github-icon.png") top left no-repeat
+        background url("github-icon.png") center center no-repeat
         background-size 19.5px 24px
         &:hover
           filter unquote("progid:DXImageTransform.Microsoft.Alpha(Opacity=90)")
