- brief highlight "white-space: normal"

--- a/lib/styles/callout/style.styl
+++ b/lib/styles/callout/style.styl
@@ -398,7 +398,7 @@ em, i
         max-width 99%
         overflow auto
         line-height 1.4em
-        &.brief
+        &.brief, & span.brief
           white-space normal
     blockquote
       border-left 4px solid silver
