- few CSS changes

--- a/lib/styles/default/style.styl
+++ b/lib/styles/default/style.styl
@@ -423,7 +423,7 @@ em, i
           white-space normal
     blockquote
       border-left 4px solid silver
-      margin-left 0
+      margin 1em 0
       padding 2px 14px
       background #F5F5F5
     p
@@ -450,6 +450,9 @@ em, i
     .wrapper
       display inline-block
       margin-right 1em
+
+  a
+    word-wrap break-word
 
 .segment, #segment-footer
   position relative
