--- a/lib/styles/callout/style.styl
+++ b/lib/styles/callout/style.styl
@@ -402,7 +402,7 @@ em, i
           white-space normal
     blockquote
       border-left 4px solid silver
-      margin-left 0
+      margin 1em 0
       padding 2px 14px
       background #F5F5F5
     p
@@ -459,6 +459,9 @@ em, i
     color transparent
     text-shadow 0 0 15px #cbcbcb
     z-index: 997
+
+  a
+    word-wrap break-word
 
 .segment.commentsonly:after
   content ""
