--- a/lib/styles/default/style.styl
+++ b/lib/styles/default/style.styl
@@ -70,28 +70,37 @@ body
   &.commentsonly
     margin-left 0
 
-  &.codedoc > .segment > .comments > .wrapper > :first-child
-    margin-top 7px
+  &.codedoc > .segment
+    & > .comments
+      padding 0 1em 0 0.3em
+    & > .comments > .wrapper
+      padding 0 4px 0 22px
+    & > .comments > .wrapper > :first-child
+      margin-top 7px
+    & > .comments > .wrapper > :last-child
+      margin-bottom 12px
 
-  &.codedoc > .segment:hover
-    border-top 1px dotted silver
-    border-bottom 1px dotted silver
-    margin-top -1px
-    margin-bottom -1px
+    &:hover
+      border-top 1px dotted silver
+      border-bottom 1px dotted silver
+      margin-top -1px
+      margin-bottom -1px
 
 #meta
   float left
-  padding 0 1em 0.5em 1.2em
+  padding 0 0em .5em 1.4em
   color brown
   font-size 13px
   font-family "Helvetica Neue", Helvetica, "Droid Sans", sans-serif
   width 36%
   border-bottom 1px dotted silver
   margin-left -8px
+  .file-path
+    padding 0 1.4em 0 0.8em
 
   &.commentsonly
     border-bottom 0
-    padding 0.25em 1em 0.5em 1em
+    padding .25em 1em .5em 2.5em
     max-width 900px
     margin 0 auto
     width 97%
@@ -103,7 +112,7 @@ body
   min-width 180px
   background-color white
   box-shadow 1px 1px 15px #cbcbcb
-  padding 0 1em 0 1em
+  padding 0 1em 0 0.3em
   top 0
   left 0
   bottom 0
@@ -113,7 +122,7 @@ body
 
 #footer
   font-family "Helvetica Neue", Helvetica, "Droid Sans", sans-serif
-  padding 2px 1.4em 0 1.3em
+  padding 2px 0.4em 0 1.3em
   font-size 11px
   font-style italic
   color silver
@@ -121,6 +130,8 @@ body
   float left
   width 36%
   border-top 1px dotted
+  & > a
+    padding-right 1em
 
   a
     color silver
@@ -405,6 +416,27 @@ h1, h2, h3, h4, h5, h6
   margin 1em 0 15px 0
   padding 0
   font-weight bold
+  position relative
+
+  &:hover > a.anchor > span
+    display block
+
+a.anchor
+  top 0
+  left 0
+  bottom 0
+  position absolute
+  padding-left 30px
+  margin-left -30px
+  & > span
+    padding-left 30px
+    margin-left -30px
+    position absolute
+    top 0
+    bottom 0
+    right 0
+    background url("link-icon.png") no-repeat 10px center
+    display none
 
 em, i
   font-style italic
@@ -427,6 +459,10 @@ ol, ul
     padding 0 1em 0 1em
     z-index 998
     line-height 1.7
+
+    .wrapper
+      padding 0 20px
+      word-wrap break-word
     li
       padding 0.1em 0
     .toc
@@ -479,7 +515,7 @@ ol, ul
     width auto
     max-width 900px
     float none
-    padding 0 2em 1em 2em
+    padding 0 1em 1em 1em
     background-color white
     border-radius 6px
     box-shadow 1px 1px 15px #cbcbcb
@@ -503,6 +539,7 @@ ol, ul
     color #cccccc
     height 4px
     padding 0
+
 
 .segment, #segment-footer
   position relative
