Groc style added

--- a/lib/styles/callout/style.styl
+++ b/lib/styles/callout/style.styl
@@ -573,8 +573,11 @@ ol, ul
   .keyword, .winutils, .method, .addition, .css .tag, .request, .status, .nginx .title
     color #859900
 
-  .number, .command, .string, .tag .value, .phpdoc, .tex .formula, .regexp, .hexcolor
+  .number, .command, .string, .tag .value, .phpdoc, .tex .formula, .hexcolor
     color #2aa198
+
+ .regexp
+    color #C343EB
 
   .title, .localvars, .chunk, .decorator, .built_in, .identifier, .vhdl .literal, .literal, .id
     color #268bd2
