--- a/lib/styles/default/style.styl
+++ b/lib/styles/default/style.styl
@@ -1,3 +1,5 @@
+contentWidth = 760px
+
 vendor(prop, args)
   -webkit-{prop} args
   -moz-{prop} args
@@ -102,7 +104,7 @@ body
   &.commentsonly
     border-bottom 0
     padding .25em 1em .5em 2.5em
-    max-width 900px
+    max-width contentWidth
     margin 0 auto
     width 97%
     float none
@@ -141,7 +143,7 @@ body
       text-decoration underline
 
   &.commentsonly
-    max-width 900px
+    max-width contentWidth
     margin 0 auto
     color #A0A0A0
     width auto
@@ -447,10 +449,7 @@ p, blockquote, ul, ol, dl, table, pre
   margin 15px 0
 
 ol, ul
-  & :first-child
-    margin-top 0
-  & :last-child
-    margin-bottom 0
+  padding-left 30px
 
 .segment
   .comments
@@ -465,8 +464,6 @@ ol, ul
     .wrapper
       padding 0 20px
       word-wrap break-word
-    li
-      padding 0.1em 0
     .toc
       padding 1em
       border 1px solid #DDD
@@ -474,7 +471,7 @@ ol, ul
       background #FAF6FF
     & > *
       overflow hidden
-    code
+    code, tt
       font-family Consolas, "Liberation Mono", Courier, monospace
       font-size 12px
       margin 0 2px
@@ -509,6 +506,54 @@ ol, ul
         margin-top 0
       & > :last-child
         margin-bottom 0
+    table
+      overflow auto
+      border-collapse collapse
+      border-spacing 0
+      padding 0
+      tr
+        border-top 1px solid #cccccc
+        background-color white
+        margin 0
+        padding 0
+        &:nth-child(2n)
+          background-color #f8f8f8
+        th
+          font-weight bold
+          border 1px solid #cccccc
+          text-align center
+          margin 0
+          padding 6px 13px
+        td
+          border 1px solid #cccccc
+          text-align left
+          margin 0
+          padding 6px 13px
+        & th :first-child, & td :first-child
+          margin-top 0
+        & th :last-child, & td :last-child
+          margin-bottom 0
+    dl
+      padding 0
+      dt
+        font-size 14px
+        font-weight bold
+        font-style italic
+        padding 0
+        margin 15px 0 5px
+        &:first-child
+          padding 0
+        & > :first-child
+          margin-top 0
+        & > :last-child
+          margin-bottom 0
+      dd
+        margin-left 0
+        padding 0 15px
+        & > :first-child
+          margin-top 0
+        & > :last-child
+          margin-bottom 0
 
   &.nocomment
     .comments
@@ -516,7 +561,7 @@ ol, ul
 
   .commentsonly
     width auto
-    max-width 900px
+    max-width contentWidth
     float none
     padding 1em 1em 1em 1em
     background-color white
